--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,5 @@
 // Custom.scss
+// Font LINK
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;600;700&display=swap');
 
 // ========= All Css
@@ -94,7 +95,6 @@
   position: absolute;
   top:35%;
   left: 7%;
-  // padding: 25px 0 0 21px;
 }
 
 .image-admin {
@@ -130,6 +130,7 @@
 }
 
 // main content css
+
 .dashboard-heading {
   font-family: 'Cairo';
   font-style: normal;
@@ -182,7 +183,7 @@
     align-items: flex-start;
   }
 }
-
+// midium
 @media (max-width:660px) {
   .header-container {
     padding: 45px 10px;
@@ -197,6 +198,7 @@
   }
 }
 
+// Small
 @media (max-width:560px) {
   .search-position {
     top:30%;
@@ -218,163 +220,6 @@
   }
  
 }
-
-// * {
-//   margin: 0;
-//   padding: 0;
-//   box-sizing: border-box;
-//   font-family: "Cairo", sans-serif;
-// }
-// body {
-//   font-family: "Cairo", sans-serif;
-// }
-// .dashboard-container {
-//   width: 100%;
-//   display: flex;
-// }
-
-// .header-container {
-//   background-color: rgba(60, 194, 224, 0.1);
-//   width: 100%;
-//   order: 2;
-//   padding-top: 40px;
-//   padding-left: 40px;
-//   padding-right: 40px;
-//   // padding: 45px 40px;
-// }
-
-// .sidebar-container {
-//   width: 160px;
-//   background-color: #ffffff;
-//   order: 1;
-// }
-
-// .input-field {
-//   // font-style: italic;
-//   font-size: 18px;
-//   line-height: 25px;
-//   color: #4e7d96 !important;
-//   border: none;
-//   height: 60px;
-//   background: #ffffff;
-//   border-radius: 20px;
-//   padding: 0 70px;
-// }
-
-// .input-field:focus {
-//   outline: none !important;
-// }
-
-// .logo-container {
-//   text-align: center;
-//   padding: 0 !important;
-//   margin: 0 !important;
-//   display: flex !important;
-//   flex-direction: column !important;
-// }
-
-// .dashboard-icon,
-// .dashboard-main-icon {
-//   list-style: none;
-//   cursor: pointer;
-// }
-
-// .dashboard-main-icon {
-//   margin: 50px;
-// }
-
-// .dashboard-icon {
-//   width: 60px;
-//   height: 60px;
-//   margin: 0 auto;
-//   background: #ffffff;
-//   border-radius: 20px;
-//   margin-bottom: 15px;
-//   transition: 0.5s all 0.1s linear;
-// }
-
-// .dashboard-icon:hover {
-//   box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.1);
-// }
-
-// .dashboard-icon img {
-//   padding: 17px;
-// }
-
-// .svg-vector {
-//   padding: 20px 0 0 21px;
-// }
-
-// .image-admin {
-//   width: 60px;
-//   height: 60px;
-//   background: #6f96aa;
-//   border-radius: 20px;
-// }
-
-// .admin-details h5 {
-//   font-style: normal;
-//   font-weight: 700;
-//   font-size: 18px;
-//   line-height: 34px;
-//   color: #4e7d96;
-//   margin-bottom: 0;
-// }
-
-// .admin-details p {
-//   font-style: normal;
-//   font-size: 18px;
-//   line-height: 20px;
-//   color: #6f96aa;
-// }
-
-// .custom-badge {
-//   color: #ffffff;
-//   font-weight: 700;
-//   background: #ff844b;
-//   border-radius: 5px;
-// }
-
-// // main content css
-// .dashboard-heading {
-//   font-style: normal;
-//   font-weight: 700;
-//   font-size: 36px;
-//   line-height: 67px;
-//   color: #14172e;
-//   padding: 20px 0;
-// }
-
-// .card-container {
-//   background-color: #ffffff;
-//   padding: 30px;
-//   box-shadow: 0px 16px 25px rgba(78, 125, 150, 0.1);
-//   border-radius: 20px;
-//   margin-top: 20px;
-// }
-
-// .card-image {
-//   border: 2px solid #e3ebf1;
-//   border-radius: 40px;
-//   padding: 18px;
-// }
-
-// .card-sub-heading h5 {
-//   // font-style: italic;
-//   font-size: 18px;
-//   line-height: 25px;
-//   color: #4e7d96;
-//   margin-bottom: 0;
-// }
-// .card-sub-heading h6 {
-//   font-style: normal;
-//   font-weight: 700;
-//   font-size: 24px;
-//   line-height: 45px;
-//   color: #14172e;
-//   margin-bottom: 0;
-// }
-
 
 // Option B: Include parts of Bootstrap
 
